#12 Avoid content moving behind navigation

--- a/extensions/user_template/Resources/Private/Sass/custom/_scaffolding-custom.scss
+++ b/extensions/user_template/Resources/Private/Sass/custom/_scaffolding-custom.scss
@@ -64,6 +64,7 @@ body {
 */
 
 .page-content {
+  margin-top: 1rem;
   z-index: 1;
   position: relative;
 }
